; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_selfuncs.c_convert_bytea_to_scalar.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_selfuncs.c_convert_bytea_to_scalar.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, double*, i32, double*, i32, double*)* @convert_bytea_to_scalar to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @convert_bytea_to_scalar(i32 %0, double* %1, i32 %2, double* %3, i32 %4, double* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca double*, align 8
  %9 = alloca i32, align 4
  %10 = alloca double*, align 8
  %11 = alloca i32, align 4
  %12 = alloca double*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  %22 = alloca i32, align 4
  %23 = alloca i8*, align 8
  %24 = alloca i8*, align 8
  %25 = alloca i8*, align 8
  store i32 %0, i32* %7, align 4
  store double* %1, double** %8, align 8
  store i32 %2, i32* %9, align 4
  store double* %3, double** %10, align 8
  store i32 %4, i32* %11, align 4
  store double* %5, double** %12, align 8
  %26 = load i32, i32* %7, align 4
  %27 = call i32* @DatumGetByteaPP(i32 %26)
  store i32* %27, i32** %13, align 8
  %28 = load i32, i32* %9, align 4
  %29 = call i32* @DatumGetByteaPP(i32 %28)
  store i32* %29, i32** %14, align 8
  %30 = load i32, i32* %11, align 4
  %31 = call i32* @DatumGetByteaPP(i32 %30)
  store i32* %31, i32** %15, align 8
  %32 = load i32*, i32** %13, align 8
  %33 = call i32 @VARSIZE_ANY_EXHDR(i32* %32)
  store i32 %33, i32* %18, align 4
  %34 = load i32*, i32** %14, align 8
  %35 = call i32 @VARSIZE_ANY_EXHDR(i32* %34)
  store i32 %35, i32* %19, align 4
  %36 = load i32*, i32** %15, align 8
  %37 = call i32 @VARSIZE_ANY_EXHDR(i32* %36)
  store i32 %37, i32* %20, align 4
  %38 = load i32*, i32** %13, align 8
  %39 = call i64 @VARDATA_ANY(i32* %38)
  %40 = inttoptr i64 %39 to i8*
  store i8* %40, i8** %23, align 8
  %41 = load i32*, i32** %14, align 8
  %42 = call i64 @VARDATA_ANY(i32* %41)
  %43 = inttoptr i64 %42 to i8*
  store i8* %43, i8** %24, align 8
  %44 = load i32*, i32** %15, align 8
  %45 = call i64 @VARDATA_ANY(i32* %44)
  %46 = inttoptr i64 %45 to i8*
  store i8* %46, i8** %25, align 8
  store i32 0, i32* %16, align 4
  store i32 255, i32* %17, align 4
  %47 = load i32, i32* %18, align 4
  %48 = load i32, i32* %19, align 4
  %49 = call i32 @Min(i32 %47, i32 %48)
  %50 = load i32, i32* %20, align 4
  %51 = call i32 @Min(i32 %49, i32 %50)
  store i32 %51, i32* %22, align 4
  store i32 0, i32* %21, align 4
  br label %52

52:                                               ; preds = %86, %6
  %53 = load i32, i32* %21, align 4
  %54 = load i32, i32* %22, align 4
  %55 = icmp slt i32 %53, %54
  br i1 %55, label %56, label %89

56:                                               ; preds = %52
  %57 = load i8*, i8** %24, align 8
  %58 = load i8, i8* %57, align 1
  %59 = zext i8 %58 to i32
  %60 = load i8*, i8** %25, align 8
  %61 = load i8, i8* %60, align 1
  %62 = zext i8 %61 to i32
  %63 = icmp ne i32 %59, %62
  br i1 %63, label %72, label %64

64:                                               ; preds = %56
  %65 = load i8*, i8** %24, align 8
  %66 = load i8, i8* %65, align 1
  %67 = zext i8 %66 to i32
  %68 = load i8*, i8** %23, align 8
  %69 = load i8, i8* %68, align 1
  %70 = zext i8 %69 to i32
  %71 = icmp ne i32 %67, %70
  br i1 %71, label %72, label %73

72:                                               ; preds = %64, %56
  br label %89

73:                                               ; preds = %64
  %74 = load i8*, i8** %24, align 8
  %75 = getelementptr inbounds i8, i8* %74, i32 1
  store i8* %75, i8** %24, align 8
  %76 = load i8*, i8** %25, align 8
  %77 = getelementptr inbounds i8, i8* %76, i32 1
  store i8* %77, i8** %25, align 8
  %78 = load i8*, i8** %23, align 8
  %79 = getelementptr inbounds i8, i8* %78, i32 1
  store i8* %79, i8** %23, align 8
  %80 = load i32, i32* %19, align 4
  %81 = add nsw i32 %80, -1
  store i32 %81, i32* %19, align 4
  %82 = load i32, i32* %20, align 4
  %83 = add nsw i32 %82, -1
  store i32 %83, i32* %20, align 4
  %84 = load i32, i32* %18, align 4
  %85 = add nsw i32 %84, -1
  store i32 %85, i32* %18, align 4
  br label %86

86:                                               ; preds = %73
  %87 = load i32, i32* %21, align 4
  %88 = add nsw i32 %87, 1
  store i32 %88, i32* %21, align 4
  br label %52

89:                                               ; preds = %72, %52
  %90 = load i8*, i8** %23, align 8
  %91 = load i32, i32* %18, align 4
  %92 = load i32, i32* %16, align 4
  %93 = load i32, i32* %17, align 4
  %94 = call double @convert_one_bytea_to_scalar(i8* %90, i32 %91, i32 %92, i32 %93)
  %95 = load double*, double** %8, align 8
  store double %94, double* %95, align 8
  %96 = load i8*, i8** %24, align 8
  %97 = load i32, i32* %19, align 4
  %98 = load i32, i32* %16, align 4
  %99 = load i32, i32* %17, align 4
  %100 = call double @convert_one_bytea_to_scalar(i8* %96, i32 %97, i32 %98, i32 %99)
  %101 = load double*, double** %10, align 8
  store double %100, double* %101, align 8
  %102 = load i8*, i8** %25, align 8
  %103 = load i32, i32* %20, align 4
  %104 = load i32, i32* %16, align 4
  %105 = load i32, i32* %17, align 4
  %106 = call double @convert_one_bytea_to_scalar(i8* %102, i32 %103, i32 %104, i32 %105)
  %107 = load double*, double** %12, align 8
  store double %106, double* %107, align 8
  ret void
}

declare dso_local i32* @DatumGetByteaPP(i32) #1

declare dso_local i32 @VARSIZE_ANY_EXHDR(i32*) #1

declare dso_local i64 @VARDATA_ANY(i32*) #1

declare dso_local i32 @Min(i32, i32) #1

declare dso_local double @convert_one_bytea_to_scalar(i8*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
